syntax = "proto3";

package auth.v1;

option go_package = "github.com/guipguia/api/proto/auth/v1;authv1";

import "google/protobuf/timestamp.proto";

// ============================================
// Auth Service Definition
// ============================================
// Note: Tenant ID is passed via gRPC metadata header "x-tenant-id"
service AuthService {
  // Email/Password Authentication
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);

  // 2FA/TOTP Management
  rpc Enable2FA(Enable2FARequest) returns (Enable2FAResponse);
  rpc Verify2FA(Verify2FARequest) returns (Verify2FAResponse);
  rpc Disable2FA(Disable2FARequest) returns (Disable2FAResponse);
  rpc Generate2FABackupCodes(Generate2FABackupCodesRequest) returns (Generate2FABackupCodesResponse);

  // Passwordless Authentication
  rpc SendPasswordlessEmail(SendPasswordlessEmailRequest) returns (SendPasswordlessEmailResponse);
  rpc VerifyPasswordlessToken(VerifyPasswordlessTokenRequest) returns (VerifyPasswordlessTokenResponse);

  // OAuth
  rpc GetOAuthURL(GetOAuthURLRequest) returns (GetOAuthURLResponse);
  rpc OAuthCallback(OAuthCallbackRequest) returns (OAuthCallbackResponse);
  rpc LinkOAuthAccount(LinkOAuthAccountRequest) returns (LinkOAuthAccountResponse);
  rpc UnlinkOAuthAccount(UnlinkOAuthAccountRequest) returns (UnlinkOAuthAccountResponse);

  // Token & Session Management
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
  rpc GetActiveSessions(GetActiveSessionsRequest) returns (GetActiveSessionsResponse);
  rpc RevokeSession(RevokeSessionRequest) returns (RevokeSessionResponse);
  rpc RevokeAllSessions(RevokeAllSessionsRequest) returns (RevokeAllSessionsResponse);

  // User Management
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ResendVerificationEmail(ResendVerificationEmailRequest) returns (ResendVerificationEmailResponse);

  // Account Security (Compliance)
  rpc GetAccountLockoutStatus(GetAccountLockoutStatusRequest) returns (GetAccountLockoutStatusResponse);
  rpc UnlockAccount(UnlockAccountRequest) returns (UnlockAccountResponse);
  rpc GetLoginHistory(GetLoginHistoryRequest) returns (GetLoginHistoryResponse);

  // Audit Logs (Compliance - HIPAA, SOC 2, GDPR)
  rpc GetAuditLogs(GetAuditLogsRequest) returns (GetAuditLogsResponse);
}

// ============================================
// Tenant Management Service
// ============================================
service TenantService {
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
  rpc GetTenant(GetTenantRequest) returns (GetTenantResponse);
  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse);
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse);
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse);
  rpc SuspendTenant(SuspendTenantRequest) returns (SuspendTenantResponse);
  rpc ActivateTenant(ActivateTenantRequest) returns (ActivateTenantResponse);
}

// ============================================
// Messages - Registration & Login
// ============================================
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  map<string, string> metadata = 5;
}

message RegisterResponse {
  string user_id = 1;
  string email = 2;
  bool email_verified = 3;
  string message = 4;
  string tenant_id = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string totp_code = 3; // Optional, required if 2FA is enabled
  string device_id = 4;
  string device_name = 5;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  User user = 4;
  bool requires_2fa = 5; // If true, client must call Verify2FA
  string session_id = 6;
  bool requires_password_change = 7; // If true, user must change password
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message LogoutRequest {
  string session_id = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// Messages - 2FA/TOTP
// ============================================
message Enable2FARequest {
  string user_id = 1;
}

message Enable2FAResponse {
  string secret = 1;
  string qr_code_url = 2;
  repeated string backup_codes = 3;
}

message Verify2FARequest {
  string user_id = 1;
  string totp_code = 2;
  string session_id = 3; // For completing login flow
}

message Verify2FAResponse {
  bool verified = 1;
  string access_token = 2; // Returned after successful 2FA during login
  string refresh_token = 3;
  int64 expires_in = 4;
  string message = 5;
}

message Disable2FARequest {
  string user_id = 1;
  string password = 2;
  string totp_code = 3;
}

message Disable2FAResponse {
  bool success = 1;
  string message = 2;
}

message Generate2FABackupCodesRequest {
  string user_id = 1;
  string password = 2;
}

message Generate2FABackupCodesResponse {
  repeated string backup_codes = 1;
}

// ============================================
// Messages - Passwordless Authentication
// ============================================
message SendPasswordlessEmailRequest {
  string email = 1;
  string redirect_url = 2; // Optional callback URL
}

message SendPasswordlessEmailResponse {
  bool success = 1;
  string message = 2;
  int64 expires_in = 3;
}

message VerifyPasswordlessTokenRequest {
  string token = 1;
  string device_id = 2;
  string device_name = 3;
}

message VerifyPasswordlessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  User user = 4;
  string session_id = 5;
}

// ============================================
// Messages - OAuth
// ============================================
message GetOAuthURLRequest {
  OAuthProvider provider = 1;
  string redirect_uri = 2;
  string state = 3;
  repeated string scopes = 4;
}

message GetOAuthURLResponse {
  string auth_url = 1;
  string state = 2;
}

message OAuthCallbackRequest {
  OAuthProvider provider = 1;
  string code = 2;
  string state = 3;
  string redirect_uri = 4;
  string device_id = 5;
  string device_name = 6;
}

message OAuthCallbackResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  User user = 4;
  bool is_new_user = 5;
  string session_id = 6;
}

message LinkOAuthAccountRequest {
  string user_id = 1;
  OAuthProvider provider = 2;
  string code = 3;
  string state = 4;
}

message LinkOAuthAccountResponse {
  bool success = 1;
  string message = 2;
  OAuthAccount oauth_account = 3;
}

message UnlinkOAuthAccountRequest {
  string user_id = 1;
  OAuthProvider provider = 2;
}

message UnlinkOAuthAccountResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// Messages - Token & Session Management
// ============================================
message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string tenant_id = 4;
  map<string, string> claims = 5;
  google.protobuf.Timestamp expires_at = 6;
}

message RevokeTokenRequest {
  string token = 1;
  TokenType token_type = 2;
}

message RevokeTokenResponse {
  bool success = 1;
  string message = 2;
}

message GetActiveSessionsRequest {
  string user_id = 1;
}

message GetActiveSessionsResponse {
  repeated Session sessions = 1;
}

message RevokeSessionRequest {
  string user_id = 1;
  string session_id = 2;
}

message RevokeSessionResponse {
  bool success = 1;
  string message = 2;
}

message RevokeAllSessionsRequest {
  string user_id = 1;
  bool except_current = 2; // If true, keep the current session
}

message RevokeAllSessionsResponse {
  bool success = 1;
  string message = 2;
  int32 revoked_count = 3;
}

// ============================================
// Messages - User Management
// ============================================
message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  User user = 1;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  map<string, string> metadata = 5;
}

message UpdateUserProfileResponse {
  User user = 1;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
}

message ResendVerificationEmailRequest {
  string email = 1;
}

message ResendVerificationEmailResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// Messages - Account Security (Compliance)
// ============================================
message GetAccountLockoutStatusRequest {
  string user_id = 1;
}

message GetAccountLockoutStatusResponse {
  bool is_locked = 1;
  google.protobuf.Timestamp locked_at = 2;
  google.protobuf.Timestamp unlocks_at = 3;
  string lock_reason = 4;
  int32 failed_attempts = 5;
}

message UnlockAccountRequest {
  string user_id = 1;
}

message UnlockAccountResponse {
  bool success = 1;
  string message = 2;
}

message GetLoginHistoryRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
}

message GetLoginHistoryResponse {
  repeated LoginAttempt attempts = 1;
  int64 total = 2;
}

message LoginAttempt {
  string id = 1;
  string email = 2;
  string ip_address = 3;
  string user_agent = 4;
  bool success = 5;
  string failure_reason = 6;
  google.protobuf.Timestamp attempted_at = 7;
}

// ============================================
// Messages - Audit Logs (Compliance)
// ============================================
message GetAuditLogsRequest {
  string user_id = 1; // Optional: filter by user
  string action = 2; // Optional: filter by action type
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetAuditLogsResponse {
  repeated AuditLog logs = 1;
  int64 total = 2;
}

message AuditLog {
  string id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string actor_id = 4;
  string action = 5;
  string resource_type = 6;
  string resource_id = 7;
  string status = 8;
  string failure_reason = 9;
  string ip_address = 10;
  string user_agent = 11;
  map<string, string> metadata = 12;
  google.protobuf.Timestamp created_at = 13;
}

// ============================================
// Messages - Tenant Management
// ============================================
message CreateTenantRequest {
  string name = 1;
  string slug = 2;
  map<string, string> settings = 3;
}

message CreateTenantResponse {
  Tenant tenant = 1;
}

message GetTenantRequest {
  string tenant_id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

message UpdateTenantRequest {
  string tenant_id = 1;
  string name = 2;
  map<string, string> settings = 3;
}

message UpdateTenantResponse {
  Tenant tenant = 1;
}

message DeleteTenantRequest {
  string tenant_id = 1;
}

message DeleteTenantResponse {
  bool success = 1;
  string message = 2;
}

message ListTenantsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListTenantsResponse {
  repeated Tenant tenants = 1;
  int64 total = 2;
}

message SuspendTenantRequest {
  string tenant_id = 1;
  string reason = 2;
}

message SuspendTenantResponse {
  bool success = 1;
  string message = 2;
}

message ActivateTenantRequest {
  string tenant_id = 1;
}

message ActivateTenantResponse {
  bool success = 1;
  string message = 2;
}

message Tenant {
  string id = 1;
  string name = 2;
  string slug = 3;
  TenantStatus status = 4;
  map<string, string> settings = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// ============================================
// Common Models
// ============================================
message User {
  string id = 1;
  string tenant_id = 2;
  string email = 3;
  bool email_verified = 4;
  string first_name = 5;
  string last_name = 6;
  string phone_number = 7;
  bool two_factor_enabled = 8;
  repeated OAuthAccount oauth_accounts = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp last_login_at = 12;
  map<string, string> metadata = 13;
  bool account_locked = 14;
  bool must_change_password = 15;
}

message Session {
  string id = 1;
  string user_id = 2;
  string tenant_id = 3;
  string device_id = 4;
  string device_name = 5;
  string ip_address = 6;
  string user_agent = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp last_accessed_at = 9;
  google.protobuf.Timestamp expires_at = 10;
  bool is_current = 11;
}

message OAuthAccount {
  OAuthProvider provider = 1;
  string provider_user_id = 2;
  string email = 3;
  google.protobuf.Timestamp linked_at = 4;
}

// ============================================
// Enums
// ============================================
enum OAuthProvider {
  OAUTH_PROVIDER_UNSPECIFIED = 0;
  OAUTH_PROVIDER_GOOGLE = 1;
  OAUTH_PROVIDER_GITHUB = 2;
  OAUTH_PROVIDER_FACEBOOK = 3;
  OAUTH_PROVIDER_APPLE = 4;
  OAUTH_PROVIDER_MICROSOFT = 5;
  OAUTH_PROVIDER_DISCORD = 6;
}

enum TokenType {
  TOKEN_TYPE_UNSPECIFIED = 0;
  TOKEN_TYPE_ACCESS = 1;
  TOKEN_TYPE_REFRESH = 2;
}

enum TenantStatus {
  TENANT_STATUS_UNSPECIFIED = 0;
  TENANT_STATUS_ACTIVE = 1;
  TENANT_STATUS_SUSPENDED = 2;
  TENANT_STATUS_DELETED = 3;
}
